...
            }
        }
    }
}

object RegistrationScreenTestTags {
    const val REGISTRATION_TITLE = "registration screen title"
    const val REGISTRATION_LOGIN_BUTTON = "registration screen button"
    const val REGISTRATION_BACK_BUTTON = "registration screen back button"
    const val REGISTRATION_NAME_INPUT = "registration screen name input"
    const val REGISTRATION_LAST_NAME_INPUT = "registration screen last name input"
    const val REGISTRATION_EMAIL_INPUT = "registration screen email input"
    const val REGISTRATION_PASSWORD_INPUT = "registration screen password input"
    const val REGISTRATION_REPEAT_PASSWORD_INPUT = "registration screen repeat password input"
}
