...
            }
        }
    }
}

object LoginScreenTestTags {
    const val LOGIN_TITLE = "login screen title"
    const val LOGIN_EMAIL_INPUT = "login screen email input"
    const val LOGIN_PASSWORD_INPUT = "login screen password input"
    const val LOGIN_LOGIN_BUTTON = "login screen login button"
    const val LOGIN_REGISTER_BUTTON = "login screen register button"
    const val LOGIN_FORGOT_PASSWORD_BUTTON = "login screen forgot password button"
}
