...
        }

    }
}

object RegistrationConfirmationScreenTestTags {
    const val REGISTRATION_CONFIRMATION_TITLE = "registration confirmation screen title"
    const val REGISTRATION_CONFIRMATION_OPEN_BUTTON = "registration confirmation screen open button"
    const val REGISTRATION_CONFIRMATION_RESEND_BUTTON =
        "registration confirmation screen resend button"
    const val REGISTRATION_CONFIRMATION_BACK_BUTTON = "registration confirmation screen back button"
    const val REGISTRATION_CONFIRMATION_SHOW_SNACKBAR = "registration confirmation screen show snackBar"
}
