...
    ) {
        onPrimaryButtonClicked()
    }
}

object EventDetailsScreenTestTags {
    const val EVENT_DETAILS_EVENT_NAME = "event details event name"
    const val EVENT_DETAILS_BACK_BUTTON = "event details back button"
    const val EVENT_DETAILS_PRIMARY_BUTTON = "event details primary button"
    const val EVENT_DETAILS_ATTENDEES_BUTTON = "event details attendee button"
}
